 - Hashed and salted the example data

- Added additional method to database.py and a call to it in routes.new_booking
  to update the user_details['booking stat'] value.

- Added additional method to database.py and a call to it in routes.new_booking
  to update the user_details['Homebay'] with a name rather than a number.