@@ -284,7 +284,7 @@ def get_all_cars():
 ##  Bay (detail, list, finding cars inside bay)
 #####################################################
 
-def get_all_bays():
+def get_all_bays(hb):
 
     # Get all the bays that PeerCar has :)
     # And the number of bays
@@ -295,13 +295,20 @@ def get_all_bays():
         return ERROR_CODE
     cur = conn.cursor()
 
+    print(hb)
+
     try:
+
         sql = """SELECT CB.name, CB.address, count(C.regno) AS count
                  FROM carbay CB INNER JOIN car C ON (CB.bayid = C.parkedat)
+                 where CB.name = %s
                  GROUP BY CB.name, CB.address
-                 ORDER BY name ASC"""
+                 UNION ALL
+                 SELECT CB.name, CB.address, count(C.regno) AS count
+                 FROM carbay CB INNER JOIN car C ON (CB.bayid = C.parkedat)
+                 GROUP BY CB.name, CB.address"""
 
-        cur.execute(sql)
+        cur.execute(sql, (hb,))
         result = cur.fetchall()
         cur.close()
         conn.close()
